padding top at  footer

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,6 @@
 @import "../../common/color.scss";
 .footer {
+    padding-top: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
